# gnk-monitoring

./: .gitignore  DEPLOYMENT_GUIDE.md  README.md  docker-compose.yml  env.monitoring.template
config/: promtail-config.yml
config/caddy/: .gitignore  Caddyfile
config/loki/: config.yaml
config/prometheus/: prometheus.yml
connectivity-checker/: Dockerfile  README.md  main.py  pyproject.toml
connectivity-checker/app/: main.py
connectivity-checker/config/: nodes.inventory.yml
connectivity-checker/config/profiles/: default.yml  example-http.yml
hub-poller/: Dockerfile  requirements.txt
hub-poller/app/: main.py
hubs/: hubs.example.yml
metrics-collector/: Dockerfile  README.md  main.py  pyproject.toml
provisioning/dashboards/: provider.yml
provisioning/dashboards/dashboards/: connectivity.json  docker-logs.json  gpu-metrics.json  hub-nodes.json  node-exporter-full.json  system-metrics.json  system-overview.json  vesting.json
provisioning/datasources/: loki.yml  prometheus.yml
remote/: .env_template  .gitignore  README.md  deploy-promtail.sh  docker-compose.yml  grafana-agent-config.yml.template  promtail-config.yml
remote/connectivity/: node.yml
remote/connectivity/profiles/: remote-default.yml
remote/process-exporter/: process-exporter.yaml
scripts/: create_cert.sh  logs.sh  restart.sh  start.sh  status.sh  stop.sh
vesting/: addresses.example.yml
vesting-poller/: Dockerfile  requirements.txt
vesting-poller/app/: main.py
