[project]
name = "metrics-collector"
version = "0.1.0"
description = "Emit system metrics to stdout for promtail"
authors = [{ name = "GNK" }]
requires-python = ">=3.11"
dependencies = []

[project.scripts]
metrics-collector = "metrics_collector.main:main"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

